tests/ui/fail/log_unknown_key_tpl.rs
extern crate emit;

fn main() {
    emit::info!("something went wrong: {x}");
}
